--- a/02-building-blocks/02-exercise-nycflights/02-exercise-nycflights_solution.Rmd
+++ b/02-building-blocks/02-exercise-nycflights/02-exercise-nycflights_solution.Rmd
@@ -83,12 +83,12 @@ weather <- read_csv("~/CSX460/CSX460/02-building-blocks/02-exercise-nycflights/d
 
 flight_planes <- left_join(flight, planes)
 
-a<-dplyr::left_join(flight, planes, by = c( "tailnum"))
-b<-dplyr::left_join(a, weather, by = c("origin", "time_hour"))
+a<-dplyr::inner_join(flights, planes, by = c( "tailnum"))
+b<-dplyr::inner_join(a, weather, by = c("origin", "time_hour"))
 
 names(airports)[1] <- "origin"
 
-c<-dplyr::left_join(a, airports, by = c("origin"))
+c<-dplyr::inner_join(a, airports, by = c("origin"))
 
 str(c)
 
